--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="/">
-                <img src="/images/WebStudio.svg" alt="логотип сайту">
+                <img src="./images/WebStudio.svg" alt="логотип сайту">
             </a>
            <ul>
             <li><a href="">Студія</a></li>
