--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <section>
         <h2>Чим ми займаємося</h2>
        <ul>
-           <li><img src="/images/img_operation_1.png" alt="вид діяльності 1" width="370"></li>
+           <li><img src="./images/img_operation_1.png" alt="вид діяльності 1" width="370"></li>
          
            <li><img src="/images/img_operation_2.png" alt="вид діяльності 2" width="370"></li>
           
-           <li><img src="/images/img_operation_3.png" alt="вид діяльності 3" width="370"></li>
+           <li><img src="./images/img_operation_3.png" alt="вид діяльності 3" width="370"></li>
         </ul>
     </section>
     <!--Наша команда-->
@@ -68,22 +68,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="/images/img1.jpg" alt=" 1 фото члена команди " width="270">
+                <img src="./images/img1.jpg" alt=" 1 фото члена команди " width="270">
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/img2.jpg" alt="2 фото члена команди" width="270">
+                <img src="./images/img2.jpg" alt="2 фото члена команди" width="270">
                 <h3>Ольга Рєпіна</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/img3.jpg" alt="3 фото члена команди" width="270">
+                <img src="./images/img3.jpg" alt="3 фото члена команди" width="270">
                 <h3>Микола Тарасов</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/img4.jpg" alt="4 фото члена команди" width="270">
+                <img src="./images/img4.jpg" alt="4 фото члена команди" width="270">
                 <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
