--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="./images/img_operation_1.jpg"
+              src="./images/img-operation-1.jpg"
               alt="вид діяльності 1"
               width="370"
             />
@@ -77,7 +77,7 @@
 
           <li>
             <img
-              src="/images/img_operation_2.jpg"
+              src="/images/img-operation-2.jpg"
               alt="вид діяльності 2"
               width="370"
             />
@@ -85,7 +85,7 @@
 
           <li>
             <img
-              src="./images/img_operation_3.jpg"
+              src="./images/img-operation-3.jpg"
               alt="вид діяльності 3"
               width="370"
             />
