--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
       </section>
     </main>
     <!--футер-->
-    <footer>--футер--</footer>
+    <footer>
+        <div>
+            <address>
+                м. Київ, пр-т Лесі Українки, 26<br/>
+                info@devstudio.com<br/>
+                +38 096 111 11 11
+            </address>
+        </div>
+    </footer>
   </body>
 </html>
