--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
           <li>
             <img
-              src="/images/img-operation-2.jpg"
+              src="./images/img-operation-2.jpg"
               alt="вид діяльності 2"
               width="370"
             />
