зміна коментарів фото

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <li>
             <img
               src="./images/img1.jpg"
-              alt=" 1 фото члена команди "
+              alt="фото Ігор Дем'яненко"
               width="270"
             />
             <h3>Ігор Дем'яненко</h3>
@@ -108,7 +108,7 @@
           <li>
             <img
               src="./images/img2.jpg"
-              alt="2 фото члена команди"
+              alt="фото Ольга Рєпіна"
               width="270"
             />
             <h3>Ольга Рєпіна</h3>
@@ -117,7 +117,7 @@
           <li>
             <img
               src="./images/img3.jpg"
-              alt="3 фото члена команди"
+              alt="фото Микола Тарасов"
               width="270"
             />
             <h3>Микола Тарасов</h3>
@@ -126,7 +126,7 @@
           <li>
             <img
               src="./images/img4.jpg"
-              alt="4 фото члена команди"
+              alt="фото Михайло Єрмаков"
               width="270"
             />
             <h3>Михайло Єрмаков</h3>
