--- a/index.html
+++ b/index.html
@@ -1,149 +1,153 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/">
-          <p>WebStudio</p>
-        </a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <!--Шапка сайту-->
-      <div>
-        <section>
-          <h1>Ефективні рішення для вашого бізнесу</h1>
-          <button type="button">Замовити послугу</button>
-        </section>
-      </div>
-      <!--Основні акценти-->
-      <section>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!--Напрямки діяльності-->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img-operation-1.jpg"
-              alt="вид діяльності 1"
-              width="370"
-            />
-          </li>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="/">
+                    <p>WebStudio</p>
+                </a>
+                <ul>
+                    <li><a href="">Студія</a></li>
+                    <li><a href="">Портфоліо</a></li>
+                    <li><a href="">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul>
+                <li><a href="">info@devstudio.com</a></li>
+                <li><a href="">+38 096 111 11 11</a></li>
+            </ul>
+        </header>
+        <main>
+            <!--Шапка сайту-->
+            <div>
+                <section>
+                    <h1>Ефективні рішення для вашого бізнесу</h1>
+                    <button type="button">Замовити послугу</button>
+                </section>
+            </div>
+            <!--Основні акценти-->
+            <section>
+                <ul>
+                    <li>
+                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p>
+                            Ідейні міркування, і навіть початок повсякденної
+                            роботи з формування позиції.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                        <p>
+                            Завдання організації, особливо рамки і місце
+                            навчання кадрів тягне у себе.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>ПЛАНУВАННЯ</h3>
+                        <p>
+                            Так само консультація з широким активом значною
+                            мірою зумовлює.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p>
+                            Значимість цих проблем настільки очевидна, що
+                            реалізація планових завдань.
+                        </p>
+                    </li>
+                </ul>
+            </section>
+            <!--Напрямки діяльності-->
+            <section>
+                <h2>Чим ми займаємося</h2>
+                <ul>
+                    <li>
+                        <img
+                            src="./images/img-operation-1.jpg"
+                            alt="вид діяльності 1"
+                            width="370"
+                        />
+                    </li>
 
-          <li>
-            <img
-              src="./images/img-operation-2.jpg"
-              alt="вид діяльності 2"
-              width="370"
-            />
-          </li>
+                    <li>
+                        <img
+                            src="./images/img-operation-2.jpg"
+                            alt="вид діяльності 2"
+                            width="370"
+                        />
+                    </li>
 
-          <li>
-            <img
-              src="./images/img-operation-3.jpg"
-              alt="вид діяльності 3"
-              width="370"
-            />
-          </li>
-        </ul>
-      </section>
-      <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="фото Ігор Дем'яненко"
-              width="270"
-            />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="фото Ольга Рєпіна"
-              width="270"
-            />
-            <h3>Ольга Рєпіна</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="фото Микола Тарасов"
-              width="270"
-            />
-            <h3>Микола Тарасов</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img4.jpg"
-              alt="фото Михайло Єрмаков"
-              width="270"
-            />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!--футер-->
-    <footer>
-        <div>
-            <address>
-                м. Київ, пр-т Лесі Українки, 26<br/>
-                info@devstudio.com<br/>
-                +38 096 111 11 11
-            </address>
-        </div>
-    </footer>
-  </body>
+                    <li>
+                        <img
+                            src="./images/img-operation-3.jpg"
+                            alt="вид діяльності 3"
+                            width="370"
+                        />
+                    </li>
+                </ul>
+            </section>
+            <!--Наша команда-->
+            <section>
+                <h2>Наша команда</h2>
+                <ul>
+                    <li>
+                        <img
+                            src="./images/img1.jpg"
+                            alt="фото Ігор Дем'яненко"
+                            width="270"
+                        />
+                        <h3>Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img
+                            src="./images/img2.jpg"
+                            alt="фото Ольга Рєпіна"
+                            width="270"
+                        />
+                        <h3>Ольга Рєпіна</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img
+                            src="./images/img3.jpg"
+                            alt="фото Микола Тарасов"
+                            width="270"
+                        />
+                        <h3>Микола Тарасов</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img
+                            src="./images/img4.jpg"
+                            alt="фото Михайло Єрмаков"
+                            width="270"
+                        />
+                        <h3>Михайло Єрмаков</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <!--футер-->
+        <footer>
+            <div>
+                <a href="/">
+                    <p>WebStudio</p>
+                </a>
+                <address>
+                    м. Київ, пр-т Лесі Українки, 26<br />
+                    info@devstudio.com<br />
+                    +38 096 111 11 11
+                </address>
+            </div>
+        </footer>
+    </body>
 </html>
