--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <a href="/">
-                    <p>WebStudio</p>
+                    <b>WebStudio</b>
                 </a>
                 <ul>
                     <li><a href="">Студія</a></li>
@@ -19,8 +19,8 @@
                 </ul>
             </nav>
             <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
             </ul>
         </header>
         <main>
@@ -33,6 +33,7 @@
             </div>
             <!--Основні акценти-->
             <section>
+            <h2>наші пріорітети</h2>    
                 <ul>
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -139,14 +140,15 @@
         <!--футер-->
         <footer>
             <div>
-                <a href="/">
-                    <p>WebStudio</p>
-                </a>
-                <address>
-                    м. Київ, пр-т Лесі Українки, 26<br />
-                    info@devstudio.com<br />
-                    +38 096 111 11 11
-                </address>
+                <ul>
+
+                    <li><a href="/">
+                        <b>WebStudio</b>
+                    <li>
+                        <a href="/">м. Київ, пр-т Лесі Українки, 26</a></li>
+                      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                </ul>
             </div>
         </footer>
     </body>
