--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </header>
         <main>
@@ -142,12 +142,10 @@
             <div>
                 <ul>
 
-                    <li><a href="/">
-                        <b>WebStudio</b>
-                    <li>
-                        <a href="/">м. Київ, пр-т Лесі Українки, 26</a></li>
-                      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li><a href="/"><b>WebStudio</b></a></li>
+                    <li><a href="/">м. Київ, пр-т Лесі Українки, 26></a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
                 </ul>
             </div>
         </footer>
