--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
         <!--футер-->
         <footer>
             <div>
-                <ul>
-
-                    <li><a href="/"><b>WebStudio</b></a></li>
+                <a href="/"><b>WebStudio</b></a>
+                <address>
+                    <ul>
                     <li><a href="/">м. Київ, пр-т Лесі Українки, 26></a></li>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
                 </ul>
+                </address>
             </div>
         </footer>
     </body>
